...
    onClear: () -> Unit,
    modifier: Modifier = Modifier
) {
    OutlinedTextField(
        value = value,
        onValueChange = onValueChange,
        modifier = modifier.fillMaxWidth().testTag("database-search"),
        singleLine = true,
        placeholder = {
            Text(placeholder)
        },
        trailingIcon = {
            if (value.isNotEmpty()) {
...
